--- a/implementacion_modulo_3.ipynb
+++ b/implementacion_modulo_3.ipynb
@@ -57,41 +57,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List\n",
     "import re\n",
     "\n",
-    "def find_subreddit_mentions(text: str) -> List[str]|str:\n",
-    "    subreddit_mention_pattern = re.compile(r'/r/[A-Za-z0-9]')\n",
-    "    subreddit_mentions = re.findall(subreddit_mention_pattern, text)\n",
+    "def find_subreddit_mentions(text: str) -> List[str]:\n",
+    "    \"\"\"\n",
+    "    Extrae menciones a subreddits del texto.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - text (str): Texto del cual se extraerán las menciones a subreddits.\n",
+    "\n",
+    "    Retorna:\n",
+    "    - List[str]: Lista de menciones de subreddits encontradas.\n",
+    "    \"\"\"\n",
+    "    # Patrón regex para menciones a subreddits (e.g., /r/Python)\n",
+    "    subreddit_mention_pattern = re.compile(r'/r/[A-Za-z]{1}[A-Za-z0-9]{2,22}')\n",
+    "    subreddit_mentions = subreddit_mention_pattern.findall(text)\n",
     "    return subreddit_mentions\n",
     "\n",
-    "def url_extraction(text: str) -> List[str]|str:\n",
-    "    url_pattern = patron_url = re.compile(\n",
-    "    r'(https?://(?:www\\.|(?!www))[^\\s]+)|'      # URLs con http:// o https://\n",
-    "    r'(www\\.[^\\s]+)|'                           # URLs que empiezan con www.\n",
-    "    r'([a-zA-Z0-9.-]+\\.[a-zA-Z]{2,})'           # URLs sin protocolo\n",
+    "def url_extraction(text: str) -> List[str]:\n",
+    "    \"\"\"\n",
+    "    Extrae URLs del texto\n",
+    "    \"\"\"\n",
+    "    url_pattern = re.compile(\n",
+    "        r'(https?://(?:www\\.|(?!www))[^\\s]+)|'      # URLs con http:// o https://\n",
+    "        r'(www\\.[^\\s]+)|'                           # URLs que empiezan con www.\n",
+    "        r'([a-zA-Z0-9.-]+\\.[a-zA-Z]{2,})'          # URLs sin protocolo\n",
     "    )\n",
-    "    urls = re.findall(text, url_pattern)\n",
-    "    return urls\n",
+    "    # Corregimos el orden: primero va el patrón, luego el texto\n",
+    "    urls = re.findall(url_pattern, text)\n",
+    "    \n",
+    "    # Como findall con grupos retorna tuplas, necesitamos procesar el resultado\n",
+    "    # para obtener solo las URLs válidas\n",
+    "    extracted_urls = []\n",
+    "    for url_tuple in urls:\n",
+    "        # Tomar la primera URL no vacía de cada tupla\n",
+    "        url = next((u for u in url_tuple if u), None)\n",
+    "        if url:\n",
+    "            extracted_urls.append(url)\n",
+    "    \n",
+    "    return extracted_urls\n",
     "\n",
     "def phone_number_extraction(text: str) -> List[str]|str:\n",
-    "    phone_number_pattern = re.compile(\n",
-    "    r'(\\+?\\d{1,3}[-.\\s]?)?'      # Prefijo internacional opcional\n",
-    "    r'(\\(?\\d{3}\\)?[-.\\s]?)?'     # Código de área opcional con o sin paréntesis\n",
-    "    r'(\\d{3}[-.\\s]?\\d{4})'       # Número de teléfono principal\n",
-    "    r'|(\\+?\\d{1,3}[-.\\s]?)?'     # Prefijo internacional opcional para números de 3 grupos\n",
-    "    r'(\\d{3}[-.\\s]\\d{3}[-.\\s]\\d{3})'  # Formato tipo \"654 231 235\"\n",
-    "    )\n",
-    "    phone_numbers = re.findall(text, phone_number_pattern)\n",
-    "    return phone_numbers\n",
+    "    \"\"\"\n",
+    "    Extrae números de teléfono del texto, incluyendo formatos estándar y grupos de 3 dígitos.\n",
     "\n",
-    "def dates_extraction(text: str) -> List[str]|str:\n",
-    "    dates_pattern = re.compile(r'')\n",
-    "    dates = re.findall(text, dates_pattern)\n",
+    "    Parámetros:\n",
+    "    - text (str): Texto del cual se extraerán los números de teléfono.\n",
+    "\n",
+    "    Retorna:\n",
+    "    - List[str]: Lista de números de teléfono encontrados.\n",
+    "    \"\"\"\n",
+    "    # Definir el patrón regex sin grupos de captura internos\n",
+    "    phone_number_pattern = re.compile(\n",
+    "        r'(?:\\+?\\d{1,3}[-.\\s]?)?'      # Prefijo internacional opcional\n",
+    "        r'(?:\\(?\\d{3}\\)?[-.\\s]?)?'     # Código de área opcional con o sin paréntesis\n",
+    "        r'\\d{3}[-.\\s]?\\d{4}'            # Número de teléfono principal\n",
+    "        r'|'                            # Alternativa\n",
+    "        r'(?:\\+?\\d{1,3}[-.\\s]?)?'      # Prefijo internacional opcional para formatos alternativos\n",
+    "        r'\\d{3}[-.\\s]\\d{3}[-.\\s]\\d{3}'  # Formato tipo \"654 231 235\"\n",
+    "    )\n",
+    "    phone_numbers = phone_number_pattern.findall(text)\n",
+    "    return [number.strip() for number in phone_numbers if number.strip()]\n",
+    "\n",
+    "def dates_extraction(text: str) -> List[str]:\n",
+    "    \"\"\"\n",
+    "    Extrae todas las fechas del texto en diferentes formatos utilizando una expresión regular.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - text (str): Texto del cual se extraerán las fechas.\n",
+    "\n",
+    "    Retorna:\n",
+    "    - List[str]: Lista de fechas encontradas.\n",
+    "    \"\"\"\n",
+    "    # Definir el patrón regex para extraer fechas en varios formatos\n",
+    "    dates_pattern = re.compile(\n",
+    "        r'(?<!\\w)'  # Asegura que la fecha no esté precedida por una letra\n",
+    "        r'('\n",
+    "            r'\\b\\d{1,2}[/-]\\d{1,2}[/-]\\d{2,4}\\b|'                            # DD/MM/YYYY, MM-DD-YY, etc.\n",
+    "            r'\\b(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s+\\d{1,2},\\s+\\d{4}\\b|'  # Month DD, YYYY\n",
+    "            r'\\b\\d{4}[/-]\\d{1,2}[/-]\\d{1,2}\\b'                             # YYYY/MM/DD, YYYY-MM-DD\n",
+    "        r')'\n",
+    "    )\n",
+    "    dates = dates_pattern.findall(text)\n",
     "    return dates\n",
     "\n",
     "def code_extraction(text: str) -> List[str]|str:\n",
