--- a/implementacion_modulo_5.ipynb
+++ b/implementacion_modulo_5.ipynb
@@ -26,130 +26,242 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En caso de que nos centremos en el 'clean_post', conformado por lemmas tokenizados sin posibilidad de legibilidad "
+    "Beneficios de usar el texto original ('post') a la hora de hacer el resumen:\n",
+    "\n",
+    "- Preserva la forma exacta del texto\n",
+    "\n",
+    "- En un resumen extractivo, normalmente se desea mantener intactas las frases que se toman del original para no alterar su significado literal ni su estilo.\n",
+    "\n",
+    "- Al no lematizar, no se cambian conjugaciones ni palabras, lo que garantiza que el texto sea una cita fiel del documento fuente.\n",
+    "\n",
+    "- Mayor riqueza lingüística y matices\n",
+    "\n",
+    "- Las diferencias gramaticales (tiempo verbal, género, número) pueden aportar matices que el lector valora.\n",
+    "\n",
+    "- Menor riesgo de “romper” la coherencia en frases\n",
+    "\n",
+    "- Si en un resumen extractivo seleccionamos oraciones tal cual, no necesitamos reconstruir sintácticamente nada.\n",
+    "\n",
+    "- Dejar las palabras como están minimiza problemas de concordancia (por ejemplo, si “el niño comía” se lematiza y luego sufre transformaciones, podríamos terminar con “el niño comer”, perdiendo coherencia).\n",
+    "\n",
+    "- Tokenizar (sin lematizar) es más sencillo y rápido; se reduce la complejidad y el coste computacional de la etapa de preprocesamiento.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "import os \n",
+    "if 'nltk.py' in os.listdir('.') or 'nltk.ipynb' in os.listdir('.'):\n",
+    "    print('hey')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Currito\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Currito\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\Currito\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
     "\n",
-    "def post_summarisation(text: str):\n",
-    "    pass"
+    "# Descargar los recursos necesarios de NLTK\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resumen extractivo:\n",
+      "Además, la comunidad de Python es muy activa y proporciona \n",
+      "    numerosos recursos para desarrolladores de todos los niveles.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def post_summarisation_full_text(text):\n",
+    "    from nltk.corpus import stopwords\n",
+    "    from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "    import string\n",
+    "    \"\"\"\n",
+    "    Genera un resumen extractivo usando frecuencia de palabras.\n",
+    "    text: Texto original (multi-línea) del que se extraerá el resumen.\n",
+    "    summary_sentences: Número de oraciones que quieres en tu resumen.\n",
+    "    \"\"\"\n",
+    "    # Separar en oraciones\n",
+    "    sentences = sent_tokenize(text)\n",
+    "    \n",
+    "    # Separar en palabras cada oración para calcular frecuencia\n",
+    "    stop_words = set(stopwords.words('english'))  # Ajusta idioma si es necesario\n",
+    "    word_frequencies = {}\n",
+    "    \n",
+    "    for sentence in sentences:\n",
+    "        # Tokenizar en palabras y limpiar signos de puntuación\n",
+    "        words = word_tokenize(sentence)\n",
+    "        for word in words:\n",
+    "            # Conviertes todo a minúscula y quitas signos de puntuación\n",
+    "            word = word.lower()\n",
+    "            if word not in stop_words and word not in string.punctuation:\n",
+    "                word_frequencies[word] = word_frequencies.get(word, 0) + 1\n",
+    "    \n",
+    "    # Calcular la frecuencia máxima para normalizar\n",
+    "    max_frequency = max(word_frequencies.values()) if word_frequencies else 1\n",
+    "    \n",
+    "    # Asignar puntuación a cada oración según la frecuencia de sus palabras\n",
+    "    sentence_scores = {}\n",
+    "    for sentence in sentences:\n",
+    "        sentence_scores[sentence] = 0\n",
+    "        words_in_sentence = word_tokenize(sentence.lower())\n",
+    "        for word in words_in_sentence:\n",
+    "            if word in word_frequencies:\n",
+    "                # Se suma la frecuencia normalizada de la palabra\n",
+    "                sentence_scores[sentence] += word_frequencies[word] / max_frequency\n",
+    "\n",
+    "    # Ordenar oraciones según la puntuación y escoger las mejores\n",
+    "    ranked_sentences = sorted(sentence_scores, key=sentence_scores.get, reverse=True)\n",
+    "    final_sentences = len(sentences) // 2\n",
+    "    summary = \" \".join(ranked_sentences[:final_sentences])\n",
+    "    return summary\n",
+    "\n",
+    "text_example = \"\"\"Aprender a programar requiere práctica y dedicación. Python es un \n",
+    "    excelente lenguaje para comenzar debido a su sintaxis sencilla y \n",
+    "    versatilidad. Además, la comunidad de Python es muy activa y proporciona \n",
+    "    numerosos recursos para desarrolladores de todos los niveles.\"\"\"\n",
+    "\n",
+    "resumen = post_summarisation_full_text(text_example)\n",
+    "print(f\"Resumen extractivo:\")\n",
+    "print(resumen)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resumen extractivo en 'post' original"
+    "### Resumen con tokens de la columna 'clean_post' en lugar de 'post'.\n",
+    "\n",
+    "En esta función tomamos la 'string' de tokens de la columna, calculamos las frecuencias y ordenamos para quedarnos con el 50% de aquellos\n",
+    "más comunes. Perdemos legibilidad pero podemos hacernos una mejor idea del tema del texto. \n",
+    "\n",
+    "```python \n",
+    "    # Calcular frecuencias\n",
+    "    word_frequencies = {}\n",
+    "    for token in token_list:\n",
+    "        word_frequencies[token] = word_frequencies.get(token, 0) + 1\n",
+    "    \n",
+    "    # Ordenar tokens por frecuencia\n",
+    "    sorted_tokens = sorted(word_frequencies.items(), \n",
+    "                         key=lambda x: x[1], \n",
+    "                         reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Resumen (50% de los tokens más frecuentes):\n",
+      "python learn program require practice dedication excellent language start due simple syntax versatility community active provide\n"
+     ]
+    }
+   ],
    "source": [
-    "import nltk\n",
-    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from string import punctuation\n",
-    "\n",
-    "\n",
-    "def post_summarisation(text: str, top_n: int = 3) -> str:\n",
+    "def token_based_post_summarisation(tokens: str) -> str:\n",
     "    \"\"\"\n",
-    "    Genera un resumen extractivo de un texto (post) seleccionando las oraciones\n",
-    "    con mayor puntuación basada en la frecuencia de las palabras.\n",
+    "    Genera un resumen usando el 25% de los tokens más relevantes.\n",
     "    \n",
-    "    Parámetros\n",
-    "    ----------\n",
-    "    text : str\n",
-    "        El texto completo del cual se desea generar el resumen.\n",
-    "    top_n : int, opcional\n",
-    "        Número de oraciones que se desea incluir en el resumen (por defecto 3).\n",
+    "    Args:\n",
+    "        tokens (str): String de tokens preprocesados separados por espacios\n",
     "    \n",
-    "    Retorna\n",
-    "    -------\n",
-    "    str\n",
-    "        Cadenas de oraciones elegidas como resumen (separadas por salto de línea).\n",
-    "    \n",
-    "    Ejemplo\n",
-    "    -------\n",
-    "    >>> texto = \\\"\\\"\\\"Este es un ejemplo de texto. Incluye varias oraciones para\n",
-    "    ... demostrar cómo se realiza el resumen. El resumen debe reflejar\n",
-    "    ... las ideas principales del texto. Este texto habla sobre\n",
-    "    ... la importancia de las frecuencias de palabras en el resumen.\\\"\\\"\\\"\n",
-    "    >>> resumen = post_summarisation(texto, top_n=2)\n",
-    "    >>> print(resumen)\n",
+    "    Returns:\n",
+    "        str: Resumen con los tokens más frecuentes\n",
     "    \"\"\"\n",
-    "    # 3. Calcular la frecuencia de cada palabra\n",
-    "    freq_table = {}\n",
-    "    for word in text:\n",
-    "        freq_table[word] = freq_table.get(word, 0) + 1\n",
+    "    # Convertir string de tokens a lista\n",
+    "    token_list = tokens.split()\n",
+    "    \n",
+    "    # Calcular frecuencias\n",
+    "    word_frequencies = {}\n",
+    "    for token in token_list:\n",
+    "        word_frequencies[token] = word_frequencies.get(token, 0) + 1\n",
+    "    \n",
+    "    # Ordenar tokens por frecuencia\n",
+    "    sorted_tokens = sorted(word_frequencies.items(), \n",
+    "                         key=lambda x: x[1], \n",
+    "                         reverse=True)\n",
+    "    \n",
+    "    # Seleccionar el 50% de los tokens más frecuentes\n",
+    "    num_tokens = max(1, len(token_list) // 2)\n",
+    "    selected_tokens = [token for token, _ in sorted_tokens[:num_tokens]]\n",
+    "    \n",
+    "    return \" \".join(selected_tokens)\n",
     "\n",
-    "    # 4. Puntuar cada oración en base a la frecuencia de sus palabras\n",
-    "    sentence_scores = {}\n",
-    "    for sentence in sentences:\n",
-    "        # Tokenizar la oración (sin puntuaciones, en minúsculas)\n",
-    "        sentence_words = [w.lower() for w in word_tokenize(sentence) if w not in punctuation]\n",
-    "        \n",
-    "        # Calcular la suma de frecuencias\n",
-    "        score = 0\n",
-    "        for word in sentence_words:\n",
-    "            score += freq_table.get(word, 0)\n",
-    "        \n",
-    "        # Guardar la puntuación (normalizamos por longitud para no favorecer oraciones muy largas)\n",
-    "        # (Opcional) Ajuste: dividir la suma total entre la cantidad de palabras\n",
-    "        if len(sentence_words) > 0:\n",
-    "            sentence_scores[sentence] = score / len(sentence_words)\n",
-    "\n",
-    "    # 5. Seleccionar las oraciones con la puntuación más alta\n",
-    "    # Ordenamos el diccionario de oraciones por valor (puntuación), de mayor a menor\n",
-    "    sorted_sentences = sorted(sentence_scores, key=sentence_scores.get, reverse=True)\n",
-    "\n",
-    "    # Nos quedamos con las 'top_n' oraciones\n",
-    "    summary_sentences = sorted_sentences[:top_n]\n",
-    "\n",
-    "    # 6. (Opcional) Ordenar las oraciones seleccionadas según su aparición en el texto original\n",
-    "    # para que el resumen mantenga cierta coherencia.\n",
-    "    # Lo haremos comparando índices en la lista original 'sentences'.\n",
-    "    summary_sentences_sorted_by_position = sorted(summary_sentences, key=lambda s: sentences.index(s))\n",
-    "\n",
-    "    # 7. Unir oraciones en un solo string, separadas por salto de línea o un separador\n",
-    "    summary = \"\\n\".join(summary_sentences_sorted_by_position)\n",
-    "    return summary\n",
+    "# Ejemplo de uso\n",
+    "clean_tokens_example = \"learn program require practice dedication python excellent language \\\n",
+    "    start due simple syntax versatility community python active provide numerous resource developer \\\n",
+    "        level beginner find tutorial detailed documentation library python cover practically programming need\"\n",
     "\n",
     "\n",
-    "# ---------------------------------------------------------\n",
-    "# PRUEBA / DEMO\n",
-    "# ---------------------------------------------------------\n",
-    "if __name__ == \"__main__\":\n",
-    "    # (Importante: Ejecuta nltk.download('punkt') si no lo has hecho antes)\n",
-    "    # Ejemplo rápido\n",
-    "    sample_text = \"\"\"Este es un post de ejemplo para demostrar la generación de \n",
-    "    un resumen extractivo. El resumen debe capturar las ideas principales de \n",
-    "    un texto. Implementar el método de resumen basado en frecuencias es \n",
-    "    bastante útil en textos largos, donde se busca extraer las oraciones \n",
-    "    más relevantes. Esperamos que esta demostración sea clara y concisa.\"\"\"\n",
-    "\n",
-    "    summary_result = post_summarisation(sample_text)\n",
-    "    print(\"Texto original:\\n\", sample_text)\n",
-    "    print(\"\\nResumen (top 2 oraciones):\\n\", summary_result)\n"
+    "print(\"\\nResumen (50% de los tokens más frecuentes):\")\n",
+    "print(token_based_post_summarisation(clean_tokens_example))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mainenv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.8"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
