--- a/implementacion_modulo_3.ipynb
+++ b/implementacion_modulo_3.ipynb
@@ -156,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mainenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
